@@ -1,42 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"
-  lang="en-US"
-  metal:use-macro="here/main_template/macros/master"
-  i18n:domain="eea.daviz">
-<body>
-<div metal:fill-slot="main">
-
-<div metal:use-macro="here/document_actions/macros/document_actions">
-    Document actions (print, sendto etc)
-</div>
-
-<h1 i18n:translate="" id="faceted-page-title" class="documentFirstHeading">
-  Configure exhibit
-</h1>
-
-<form tal:attributes="action string:${here/absolute_url}/@@daviz-edit.save">
-  <fieldset>
-    <legend i18n:translate="">Exhibit Views</legend>
-    <div class="field">
-      <div class="formHelp" i18n:translate="">
-        Enable Exhibit views.
-      </div>
-      <div tal:repeat="item python:template.views_vocabulary">
-        <input type="checkbox" name="views:list" tal:attributes="
-          id python:item.value;
-          value python:item.value;
-          checked python:item.value in view.enabled_views;
-          "/>
-        <label tal:attributes="for python:item.value"
-          tal:content="python:item.title" />
-      </div>
-    </div>
-  </fieldset>
-  <div class="field">
-    <input type="submit" name="form.action.save" value="Save changes"
-    i18n:attributes="value" />
-  </div>
-</form>
-
-</div>
-</body>
-</html>
