@@ -1,84 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-US"
-  lang="en-US"
-  metal:use-macro="here/main_template/macros/master"
-  i18n:domain="eea.daviz">
-
-<metal:jsslot fill-slot="javascript_head_slot">
-  <link rel="exhibit/data" type="application/json"
-    tal:attributes="href string:${here/absolute_url}/@@daviz-view.json" />
-
-  <!-- include exhibit api -->
-  <script type="text/javascript">
-  <!--
-    var daviz_jQuery = window.jQuery;
-    var daviz_$ = window.$;
-  //-->
-  </script>
-  <script src="++resource++eea.simile.exhibit/exhibit-api.js" type="text/javascript"></script>
-  <script src="++resource++eea.simile.exhibit/extensions/time/time-extension.js"></script>
-  <script src="++resource++eea.simile.exhibit/extensions/map/map-extension.js"></script>
-  <script type="text/javascript">
-  <!--
-    window.jQuery = daviz_jQuery;
-    window.$ = daviz_$;
-  //-->
-  </script>
-  <script type="text/javascript">
-  <!--
-    function DavizTableStyler(table, database){
-      jQuery(table).addClass('listing');
-    };
-    function DavizTableRowStyler(item, database, tr) {
-      if (tr.rowIndex % 2) {
-        jQuery(tr).addClass('odd');
-      } else {
-        jQuery(tr).addClass('even');
-      }
-    };
-  //-->
-  </script>
-</metal:jsslot>
-
-<body>
-
-<div metal:fill-slot="main">
-
-  <h1 tal:content="object_title" class="documentFirstHeading">
-    Title or id
-  </h1>
-
-  <div metal:use-macro="here/document_actions/macros/document_actions">
-    Document actions (print, sendto etc)
-  </div>
-
-  <p class="documentDescription"
-    tal:content="here/Description"
-    tal:condition="here/Description">
-  News summary
-  </p>
-
-<div style="float: left; width: 98%">
-  <!-- Exhibit facets -->
-  <div style="float: left; width: 19%; margin-right: 1%">
-    <tal:facets define="facets python:view.facets;">
-      <tal:facet repeat="facet_name facets">
-        <div tal:define="facet_view python:view.get_facet(facet_name)"
-          tal:replace="structure facet_view" />
-      </tal:facet>
-    </tal:facets>
-  </div>
-  <!-- Exhibit views -->
-  <div style="float: left; width: 80%" ex:role="viewPanel">
-    <tal:views define="views python:view.views;">
-      <tal:view repeat="view_name views">
-        <div tal:define="view_page python:view.get_view(view_name)"
-          tal:replace="structure view_page" />
-      </tal:view>
-    </tal:views>
-  </div>
-</div>
-<div style="clear: both"></div>
-
-</div>
-</body>
-</html>
