@@ -2,19 +2,21 @@
   xmlns="http://namespaces.zope.org/zope"
   xmlns:browser="http://namespaces.zope.org/browser">
 
-  <browser:page
-    for="eea.daviz.interfaces.IExhibitJson"
-    name="daviz.thumbnail"
-    template="view.pt"
-    class=".view.View"
-    permission="zope2.View"
-    />
+  <!-- #4196 Disabled as it's bugous on IE -->
 
-  <browser:page
-    name="daviz.thumbnail.edit"
-    for="eea.daviz.interfaces.IExhibitJson"
-    class=".edit.Edit"
-    permission="cmf.ModifyPortalContent"
-    />
+  <!--<browser:page-->
+    <!--for="eea.daviz.interfaces.IExhibitJson"-->
+    <!--name="daviz.thumbnail"-->
+    <!--template="view.pt"-->
+    <!--class=".view.View"-->
+    <!--permission="zope2.View"-->
+    <!--/>-->
+
+  <!--<browser:page-->
+    <!--name="daviz.thumbnail.edit"-->
+    <!--for="eea.daviz.interfaces.IExhibitJson"-->
+    <!--class=".edit.Edit"-->
+    <!--permission="cmf.ModifyPortalContent"-->
+    <!--/>-->
 
 </configure>
